--- a/index.html
+++ b/index.html
@@ -9,58 +9,62 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
     
     <style>
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen;
+        }
         #map { height: 90vh; width: 100%; }
+
         .filtros {
             position: absolute;
             top: 10px;
             left: 10px;
             z-index: 1000;
-            background-color: transparent;
-            padding: 0;
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            gap: 8px;
         }
-        .filtros label {
-            font-weight: bold;
-            font-size: 12px;
-            margin-bottom: 2px;
-        }
+
         .filtros select {
-            width: 150px;
-            font-size: 12px;
+            font-size: 14px;
+            width: 170px;
+            border-radius: 12px;
+            border: 1px solid #ccc;
+            padding: 6px 10px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.15);
+            background-color: #f7f7f7;
         }
+
         .choices__inner {
-            min-height: 24px;
-            font-size: 12px;
+            border-radius: 12px !important;
+            background-color: #f7f7f7 !important;
+            font-size: 13px;
+            min-height: 36px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.15) !important;
         }
-        .choices__list--multiple .choices__item {
-            padding: 2px 5px;
-            font-size: 12px;
+
+        .choices[data-type*=select-multiple] .choices__button {
+            font-size: 10px;
         }
+
         #legenda {
             position: absolute;
             bottom: 10px;
             left: 10px;
             background-color: white;
-            padding: 6px 10px;
-            border-radius: 6px;
-            font-size: 12px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
+            padding: 8px 12px;
+            border-radius: 10px;
+            font-size: 13px;
+            box-shadow: 0 0 5px rgba(0,0,0,0.15);
         }
     </style>
 </head>
 <body>
     <div class="filtros">
-        <label>CDD:</label>
         <select id="filtroCDD" multiple></select>
-        <label>GN:</label>
         <select id="filtroGN" multiple></select>
-        <label>Inplant:</label>
         <select id="filtroInplant" multiple></select>
-        <label>Rede:</label>
         <select id="filtroRede" multiple></select>
-        <label>Dia da Semana:</label>
         <select id="filtroDia" multiple></select>
     </div>
     <div id="map"></div>
@@ -88,11 +92,11 @@
         const grupoMarcadores = L.layerGroup().addTo(map);
 
         const filtros = {
-            CDD: new Choices('#filtroCDD', { removeItemButton: true }),
-            GN: new Choices('#filtroGN', { removeItemButton: true }),
-            Inplant: new Choices('#filtroInplant', { removeItemButton: true }),
-            Rede: new Choices('#filtroRede', { removeItemButton: true }),
-            Dia: new Choices('#filtroDia', { removeItemButton: true })
+            CDD: new Choices('#filtroCDD', { removeItemButton: true, placeholderValue: 'Escolha o CDD' }),
+            GN: new Choices('#filtroGN', { removeItemButton: true, placeholderValue: 'Filtrar por GN' }),
+            Inplant: new Choices('#filtroInplant', { removeItemButton: true, placeholderValue: 'Filtrar por Inplant' }),
+            Rede: new Choices('#filtroRede', { removeItemButton: true, placeholderValue: 'Filtrar por Rede' }),
+            Dia: new Choices('#filtroDia', { removeItemButton: true, placeholderValue: 'Dia da Semana' })
         };
 
         const coresPorDia = {
@@ -152,7 +156,6 @@
                         }
                     }
 
-                    // Agenda = todos os dias com '1'
                     if (!diaValido && diasSelecionados.includes('Agenda')) {
                         const isAgenda = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'].every(dia => d[dia]?.trim() === '1');
                         if (isAgenda) {
@@ -169,7 +172,7 @@
                         fillColor: cor,
                         fillOpacity: 0.8,
                         weight: 1
-                    }).bindPopup(`<b>${d['Nome'] || 'PDV'}</b><br>CDD: ${d['CDD']}<br>GN: ${d['GN']}<br>Inplant: ${d['Inplant']}<br>Rede: ${d['Rede']}`);
+                    }).bindPopup(`<b>${d['Nome']}</b><br>CDD: ${d['CDD']}<br>GN: ${d['GN']}<br>Inplant: ${d['Inplant']}<br>Rede: ${d['Rede']}`);
                     grupoMarcadores.addLayer(marker);
                 }
             });
