--- a/index.html
+++ b/index.html
@@ -1,201 +1,155 @@
+
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
     <meta charset="utf-8" />
     <title>Mapa Interativo - Ambev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js" />
-
     <style>
-        body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen; }
         #map { height: 90vh; width: 100%; }
-
         .filtros {
             position: absolute;
             top: 10px;
             left: 10px;
             z-index: 1000;
+            font-size: 12px;
             display: flex;
             flex-direction: column;
-            gap: 8px;
+            gap: 6px;
         }
-
-        .filtros select, .filtros button {
-            font-size: 14px;
-            width: 170px;
-            border-radius: 12px;
-            border: 1px solid #ccc;
-            padding: 6px 10px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.15);
-            background-color: #f7f7f7;
+        .filtros select {
+            min-width: 180px;
+            max-width: 180px;
+            font-size: 11px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
-
-        .choices__inner {
-            border-radius: 12px !important;
-            background-color: #f7f7f7 !important;
-            font-size: 13px;
-            min-height: 36px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.15) !important;
+        .choices__list--dropdown .choices__item {
+            white-space: nowrap !important;
+            overflow: hidden !important;
+            text-overflow: ellipsis !important;
         }
-
         #legenda {
             position: absolute;
             bottom: 10px;
             left: 10px;
             background-color: white;
-            padding: 8px 12px;
-            border-radius: 10px;
-            font-size: 13px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.15);
+            padding: 8px;
+            border-radius: 8px;
+            font-size: 12px;
         }
     </style>
 </head>
 <body>
     <div class="filtros">
+        <label>Escolha o CDD:</label>
         <select id="filtroCDD" multiple></select>
-        <select id="filtroGN" multiple></select>
-        <select id="filtroInplant" multiple></select>
-        <select id="filtroRede" multiple></select>
+        <label>Dia da Semana:</label>
         <select id="filtroDia" multiple></select>
-        <button onclick="toggleHeatmap()">Ativar/Desativar Heatmap</button>
+        <label>Tipo de Camada:</label>
+        <select id="filtroCamada" multiple></select>
+        <label>Inplant:</label>
+        <select id="filtroInplant" multiple></select>
+        <label>GN:</label>
+        <select id="filtroGN" multiple></select>
+        <label>Rede:</label>
+        <select id="filtroRede" multiple></select>
     </div>
-
     <div id="map"></div>
     <div id="legenda">
         <b>Legenda:</b><br>
+        Total: Azul<br>
         Agenda: Verde<br>
-        Segunda: Vermelho<br>
-        Terça: Laranja<br>
-        Quarta: Amarelo<br>
-        Quinta: Roxo<br>
-        Sexta: Preto<br>
-        Sábado: Cinza<br>
-        Total: Azul
+        Dia de Rota: Laranja
     </div>
-
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-    <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
 
     <script>
         const url = 'https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20CSV.csv';
-
         const map = L.map('map').setView([-15.7797, -47.9297], 5);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+
         const grupoMarcadores = L.layerGroup().addTo(map);
-        let heatLayer = null;
-
         const filtros = {
-            CDD: new Choices('#filtroCDD', { removeItemButton: true, placeholderValue: 'Escolha o CDD' }),
-            GN: new Choices('#filtroGN', { removeItemButton: true, placeholderValue: 'Filtrar por GN' }),
-            Inplant: new Choices('#filtroInplant', { removeItemButton: true, placeholderValue: 'Filtrar por Inplant' }),
-            Rede: new Choices('#filtroRede', { removeItemButton: true, placeholderValue: 'Filtrar por Rede' }),
-            Dia: new Choices('#filtroDia', { removeItemButton: true, placeholderValue: 'Dia da Semana' })
+            CDD: new Choices('#filtroCDD', { removeItemButton: true }),
+            Dia: new Choices('#filtroDia', { removeItemButton: true }),
+            'Tipo de Camada': new Choices('#filtroCamada', { removeItemButton: true }),
+            Inplant: new Choices('#filtroInplant', { removeItemButton: true }),
+            GN: new Choices('#filtroGN', { removeItemButton: true }),
+            Rede: new Choices('#filtroRede', { removeItemButton: true })
         };
-
         const coresPorDia = {
-            'Agenda': 'green', 'Segunda': 'red', 'Terça': 'orange',
-            'Quarta': 'yellow', 'Quinta': 'purple', 'Sexta': 'black',
-            'Sábado': 'gray', 'Total': 'blue'
+            'Agenda': 'green',
+            'Segunda': 'red',
+            'Terça': 'orange',
+            'Quarta': 'yellow',
+            'Quinta': 'purple',
+            'Sexta': 'black',
+            'Sábado': 'gray',
+            'Total': 'blue'
         };
-
         function preencherFiltros(dados, chave, controle) {
-            const valores = [...new Set(dados.map(d => d[chave]).filter(Boolean))].sort();
+            const valoresUnicos = [...new Set(dados.map(d => d[chave]).filter(Boolean))].sort();
             controle.clearChoices();
-            controle.setChoices(valores.map(v => ({ value: v, label: v })), 'value', 'label', true);
+            controle.setChoices(valoresUnicos.map(v => ({ value: v, label: v })), 'value', 'label', true);
         }
-
         function atualizarMapa(dados) {
             grupoMarcadores.clearLayers();
-            if (heatLayer) map.removeLayer(heatLayer);
-            const pontosHeatmap = [];
-
             const cdd = filtros.CDD.getValue(true);
-            const gn = filtros.GN.getValue(true);
-            const inplant = filtros.Inplant.getValue(true);
-            const rede = filtros.Rede.getValue(true);
             const diasSelecionados = filtros.Dia.getValue(true);
-
+            const camada = filtros['Tipo de Camada'].getValue(true);
+            const inplant = filtros.Inplant.getValue(true);
+            const gn = filtros.GN.getValue(true);
+            const rede = filtros.Rede.getValue(true);
             dados.forEach(d => {
-                const lat = parseFloat(d['LAT']);
-                const lon = parseFloat(d['LONG']);
-                if (isNaN(lat) || isNaN(lon)) return;
-
+                let diaValido = diasSelecionados.length === 0 || diasSelecionados.some(ds => d[ds]?.trim() === '1');
                 const cddValido = cdd.length === 0 || cdd.includes(d['CDD']);
-                const gnValido = gn.length === 0 || gn.includes(d['GN']);
+                const camadaValida = camada.length === 0 || camada.includes(d['Tipo de Camada']);
                 const inplantValido = inplant.length === 0 || inplant.includes(d['Inplant']);
-                const redeValido = rede.length === 0 || rede.includes(d['Rede']);
-
-                let diaValido = false;
-                let cor = 'blue';
-
-                if (diasSelecionados.length === 0) {
-                    const dias = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'];
-                    for (let dia of dias) {
-                        if (d[dia]?.trim() === '1') {
-                            cor = coresPorDia[dia];
-                            diaValido = true;
-                            break;
+                const gnValido = gn.length === 0 || gn.includes(d['GN']);
+                const redeValida = rede.length === 0 || rede.includes(d['Rede']);
+                if (diaValido && cddValido && camadaValida && inplantValido && gnValido && redeValida) {
+                    const lat = parseFloat(d.LAT);
+                    const lon = parseFloat(d.LONG);
+                    if (!isNaN(lat) && !isNaN(lon)) {
+                        let cor = 'blue';
+                        for (let dia of ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado']) {
+                            if (d[dia]?.trim() === '1' && coresPorDia[dia]) {
+                                cor = coresPorDia[dia];
+                                break;
+                            }
                         }
+                        const marcador = L.circleMarker([lat, lon], {
+                            radius: 6,
+                            color: cor,
+                            fillColor: cor,
+                            fillOpacity: 0.8,
+                            weight: 2
+                        }).bindPopup(`<b>${d['Nome']}</b><br>Inplant: ${d['Inplant']}<br>CDD: ${d['CDD']}`);
+                        grupoMarcadores.addLayer(marcador);
                     }
-                } else {
-                    for (let dia of diasSelecionados) {
-                        if (d[dia]?.trim() === '1') {
-                            cor = coresPorDia[dia];
-                            diaValido = true;
-                            break;
-                        }
-                    }
-                    if (!diaValido && diasSelecionados.includes('Agenda')) {
-                        const isAgenda = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'].every(dia => d[dia]?.trim() === '1');
-                        if (isAgenda) {
-                            diaValido = true;
-                            cor = coresPorDia['Agenda'];
-                        }
-                    }
-                }
-
-                if (cddValido && gnValido && inplantValido && redeValido && diaValido) {
-                    const marker = L.circleMarker([lat, lon], {
-                        radius: 6, color: cor, fillColor: cor, fillOpacity: 0.8, weight: 1
-                    }).bindPopup(`<b>${d['Nome']}</b><br>CDD: ${d['CDD']}<br>GN: ${d['GN']}<br>Inplant: ${d['Inplant']}<br>Rede: ${d['Rede']}`);
-                    grupoMarcadores.addLayer(marker);
-                    pontosHeatmap.push([lat, lon, 1]);
                 }
             });
-
-            heatLayer = L.heatLayer(pontosHeatmap, { radius: 20, blur: 15, maxZoom: 10 });
         }
-
-        function toggleHeatmap() {
-            if (heatLayer) {
-                if (map.hasLayer(heatLayer)) {
-                    map.removeLayer(heatLayer);
-                } else {
-                    heatLayer.addTo(map);
-                }
-            }
-        }
-
         Papa.parse(url, {
             download: true,
             header: true,
             complete: results => {
                 const dados = results.data;
-
                 preencherFiltros(dados, 'CDD', filtros.CDD);
-                preencherFiltros(dados, 'GN', filtros.GN);
+                preencherFiltros(dados, 'Tipo de Camada', filtros['Tipo de Camada']);
                 preencherFiltros(dados, 'Inplant', filtros.Inplant);
+                preencherFiltros(dados, 'GN', filtros.GN);
                 preencherFiltros(dados, 'Rede', filtros.Rede);
-
-                const diasSemana = ['Agenda','Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'];
+                const diasSemana = ['Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'];
                 filtros.Dia.clearChoices();
-                filtros.Dia.setChoices(diasSemana.map(d => ({ value: d, label: d })), 'value', 'label', true);
-
+                filtros.Dia.setChoices(diasSemana.map(v => ({ value: v, label: v })), 'value', 'label', true);
                 atualizarMapa(dados);
                 Object.values(filtros).forEach(f => {
                     f.passedElement.element.addEventListener('change', () => atualizarMapa(dados));
