--- a/index.html
+++ b/index.html
@@ -6,44 +6,56 @@
     <title>Mapa Interativo - Ambev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <link href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.min.css" rel="stylesheet">
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
     <style>
         #map { height: 90vh; width: 100%; }
+
         .filtros {
             position: absolute;
             top: 10px;
             left: 10px;
             z-index: 1000;
-            font-size: 12px;
-            display: flex;
-            flex-direction: column;
-            gap: 6px;
+            padding: 10px;
         }
-        .filtros select {
-            min-width: 180px;
-            max-width: 180px;
-            font-size: 11px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+
+        .filtros label {
+            font-weight: bold;
+            display: block;
+            margin-top: 5px;
+            font-size: 13px;
         }
-        .choices__list--dropdown .choices__item {
-            white-space: nowrap !important;
-            overflow: hidden !important;
-            text-overflow: ellipsis !important;
-        }
+
         #legenda {
             position: absolute;
             bottom: 10px;
             left: 10px;
             background-color: white;
-            padding: 8px;
-            border-radius: 8px;
+            padding: 10px;
+            border-radius: 10px;
+            font-size: 13px;
+        }
+
+        .choices__inner {
+            min-width: 200px;
+            max-width: 200px;
             font-size: 12px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .choices__list--dropdown .choices__item {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: 12px;
+        }
+
+        .choices[data-type*=select-multiple] .choices__button {
+            font-size: 10px;
         }
     </style>
 </head>
@@ -69,93 +81,5 @@
         Agenda: Verde<br>
         Dia de Rota: Laranja
     </div>
-
-    <script>
-        const url = 'https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20CSV.csv';
-        const map = L.map('map').setView([-15.7797, -47.9297], 5);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-
-        const grupoMarcadores = L.layerGroup().addTo(map);
-        const filtros = {
-            CDD: new Choices('#filtroCDD', { removeItemButton: true }),
-            Dia: new Choices('#filtroDia', { removeItemButton: true }),
-            'Tipo de Camada': new Choices('#filtroCamada', { removeItemButton: true }),
-            Inplant: new Choices('#filtroInplant', { removeItemButton: true }),
-            GN: new Choices('#filtroGN', { removeItemButton: true }),
-            Rede: new Choices('#filtroRede', { removeItemButton: true })
-        };
-        const coresPorDia = {
-            'Agenda': 'green',
-            'Segunda': 'red',
-            'Terça': 'orange',
-            'Quarta': 'yellow',
-            'Quinta': 'purple',
-            'Sexta': 'black',
-            'Sábado': 'gray',
-            'Total': 'blue'
-        };
-        function preencherFiltros(dados, chave, controle) {
-            const valoresUnicos = [...new Set(dados.map(d => d[chave]).filter(Boolean))].sort();
-            controle.clearChoices();
-            controle.setChoices(valoresUnicos.map(v => ({ value: v, label: v })), 'value', 'label', true);
-        }
-        function atualizarMapa(dados) {
-            grupoMarcadores.clearLayers();
-            const cdd = filtros.CDD.getValue(true);
-            const diasSelecionados = filtros.Dia.getValue(true);
-            const camada = filtros['Tipo de Camada'].getValue(true);
-            const inplant = filtros.Inplant.getValue(true);
-            const gn = filtros.GN.getValue(true);
-            const rede = filtros.Rede.getValue(true);
-            dados.forEach(d => {
-                let diaValido = diasSelecionados.length === 0 || diasSelecionados.some(ds => d[ds]?.trim() === '1');
-                const cddValido = cdd.length === 0 || cdd.includes(d['CDD']);
-                const camadaValida = camada.length === 0 || camada.includes(d['Tipo de Camada']);
-                const inplantValido = inplant.length === 0 || inplant.includes(d['Inplant']);
-                const gnValido = gn.length === 0 || gn.includes(d['GN']);
-                const redeValida = rede.length === 0 || rede.includes(d['Rede']);
-                if (diaValido && cddValido && camadaValida && inplantValido && gnValido && redeValida) {
-                    const lat = parseFloat(d.LAT);
-                    const lon = parseFloat(d.LONG);
-                    if (!isNaN(lat) && !isNaN(lon)) {
-                        let cor = 'blue';
-                        for (let dia of ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado']) {
-                            if (d[dia]?.trim() === '1' && coresPorDia[dia]) {
-                                cor = coresPorDia[dia];
-                                break;
-                            }
-                        }
-                        const marcador = L.circleMarker([lat, lon], {
-                            radius: 6,
-                            color: cor,
-                            fillColor: cor,
-                            fillOpacity: 0.8,
-                            weight: 2
-                        }).bindPopup(`<b>${d['Nome']}</b><br>Inplant: ${d['Inplant']}<br>CDD: ${d['CDD']}`);
-                        grupoMarcadores.addLayer(marcador);
-                    }
-                }
-            });
-        }
-        Papa.parse(url, {
-            download: true,
-            header: true,
-            complete: results => {
-                const dados = results.data;
-                preencherFiltros(dados, 'CDD', filtros.CDD);
-                preencherFiltros(dados, 'Tipo de Camada', filtros['Tipo de Camada']);
-                preencherFiltros(dados, 'Inplant', filtros.Inplant);
-                preencherFiltros(dados, 'GN', filtros.GN);
-                preencherFiltros(dados, 'Rede', filtros.Rede);
-                const diasSemana = ['Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'];
-                filtros.Dia.clearChoices();
-                filtros.Dia.setChoices(diasSemana.map(v => ({ value: v, label: v })), 'value', 'label', true);
-                atualizarMapa(dados);
-                Object.values(filtros).forEach(f => {
-                    f.passedElement.element.addEventListener('change', () => atualizarMapa(dados));
-                });
-            }
-        });
-    </script>
 </body>
 </html>
